<resources>

    <string name="app_name">Umpire</string>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">カウンター</string>

    <string name="ball">ボ\n|\nル</string>
    <string name="strike">ス\nト\nラ\nイ\nク</string>
    <string name="out">ア\nウ\nト</string>

	<string name="ball_text">ボール</string>
    <string name="strike_text">ストライク</string>
    <string name="out_text">アウト</string>

    <string name="count_clear">カウント\nクリア</string>
    <string name="all_clear">すべて\nクリア</string>
    <string name="sound_off">サウンド\nOFF</string>
    <string name="sound_on">サウンド\nON</string>
    <string name="plus">＋</string>
    <string name="minus">－</string>
    <string name="attack_after_text">後攻</string>
    <string name="attack_before_text">先攻</string>
    <string name="zero">0</string>
    <string name="dash">―</string>
</resources>