<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ball_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/ball"
                    android:src="@drawable/ball_label"
                    style="@style/count" />

                <ImageView
                    android:id="@+id/ball1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/ball"
                    android:src="@drawable/none"
                    style="@style/count" />

                <ImageView
                    android:id="@+id/ball2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/ball"
                    android:src="@drawable/none"
                    style="@style/count" />

                <ImageView
                    android:id="@+id/ball3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/ball"
                    android:src="@drawable/none"
                    style="@style/count" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/strike_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/strike"
                    android:src="@drawable/strike_label"
                    style="@style/count" />

                <ImageView
                    android:id="@+id/strike1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/strike"
                    android:src="@drawable/none"
                    style="@style/count" />

                <ImageView
                    android:id="@+id/strike2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/strike"
                    android:src="@drawable/none"
                    style="@style/count" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/out_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/out"
                    android:src="@drawable/out_label"
                    style="@style/count" />

                <ImageView
                    android:id="@+id/out1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/out"
                    android:src="@drawable/none"
                    style="@style/count" />

                <ImageView
                    android:id="@+id/out2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/out"
                    android:src="@drawable/none"
                    style="@style/count" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/balladd"
                android:layout_width="60dp"
                android:layout_height="90dp"
                android:text="@string/ball"
                android:contentDescription="@string/strike_text"
                style="@style/count_btn"
                android:onClick="onBallAdd" />

            <Button
                android:id="@+id/strikeadd"
                android:layout_width="60dp"
                android:layout_height="90dp"
                android:text="@string/strike"
                android:contentDescription="@string/strike_text"
                android:src="@drawable/none"
                style="@style/count_btn"
                android:onClick="onStrikeAdd" />

            <Button
                android:id="@+id/outadd"
                android:layout_width="60dp"
                android:layout_height="90dp"
                android:text="@string/out"
                android:contentDescription="@string/out_text"
                android:src="@drawable/none"
                style="@style/count_btn"
                android:onClick="onOutAdd" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/all_clear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all_clear"
            android:onClick="onAllClear" />

        <Button
            android:id="@+id/count_clear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/count_clear"
            android:onClick="onCountClear" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:baselineAligned="true"
            android:orientation="vertical" >

            <Button
                android:id="@+id/plus_left"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/plus"
                android:onClick="onLeftPlus" />

            <Button
                android:id="@+id/minus_left"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/minus"
                android:onClick="onLeftMinus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/attack_before_text"
                style="@style/score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/attack_before_text" />

            <TextView
                android:id="@+id/attack_before"
                style="@style/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/zero" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/vs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/dash" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/attack_after_text"
                style="@style/score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/attack_after_text" />

            <TextView
                android:id="@+id/attack_after"
                style="@style/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/zero" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/plus_right"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/plus"
                android:onClick="onRightPlus" />

            <Button
                android:id="@+id/minus_right"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/minus"
                android:onClick="onRightMinus" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>